--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,7 @@
 :root {
     /* Цветовая палитра */
+    --primary-kp: #1a12229d;
+    --secondary-kp: #451b88a9;
     --primary: #6a11cb;
     --primary-light: rgba(168, 168, 168, 0.2);
     --secondary: #2575fc;
